<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="Loading...please wait..."
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/school" />

        <EditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/login_edittext"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/school_mail"
            android:inputType="textEmailAddress"
            android:padding="20dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/login_edittext"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/login_text"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/btn_register"
                android:textColor="#fff" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>