<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".activities.RegisterActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="Loading...please wait..."
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_form"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="35dp"
            app:srcCompat="@drawable/register" />

        <EditText
            android:id="@+id/etSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/et_background"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/school_name"
            android:inputType="textPersonName"
            android:padding="20dp" />

        <EditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/et_background"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/school_mail"
            android:inputType="textEmailAddress"
            android:padding="20dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/et_background"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="20dp" />

        <EditText
            android:id="@+id/etRetype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/et_background"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:padding="20dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttons"
            android:text="@string/btn_register" />
    </LinearLayout>


</LinearLayout>