<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context=".activities.RecordScreening">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="Loading...please wait..."
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="Name and Surname"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="Grade"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="Code"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkTravel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/travel_in_high_risk_country" />

        <CheckBox
            android:id="@+id/checkContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/contact_with_anyone" />

        <CheckBox
            android:id="@+id/checkSymptoms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/do_you_have_symptoms" />

        <EditText
            android:id="@+id/etTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/et_background"
            android:padding="20dp"
            android:hint="@string/enter_temperature"
            android:gravity="center_horizontal"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/btnResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="#fff"
            android:background="@drawable/buttons"
            android:text="@string/submit" />
    </LinearLayout>


</LinearLayout>